examples/test/testpolicy12407.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12407
  namespace: namespace197
spec:
  podSelector:
    matchLabels:
      key18: value19
      key34: value38
      key25: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value24
          key2: value7
          key28: value27
      podSelector:
        matchLabels:
          key4: value24
          key2: value40
          key28: value9
